Diverse Compiler-Warnungen behoben Unbenutzte Variablen, Deprecated Funktionen, ...